2010-07-28  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Dimitri Glazkov.

        Chromium DevTools: [REGRESSION] sourceURL is not respected.

        https://bugs.webkit.org/show_bug.cgi?id=43124

        * src/js/DebuggerScript.js:

2010-07-28  Andrei Popescu  <andreip@google.com>

        Reviewed by Jeremy Orlow.

        [IndexedDB] WebDOMStringList default ctor does not initialize its m_private member
        variable so any attempt to append strings to a WebDOMStringList instance results in a crash.
        https://bugs.webkit.org/show_bug.cgi?id=43120

        Makes the default WebKit::WebDOMStringList ctor actually create its wrapped
        WebCore::DOMStringList instance.

        * public/WebDOMStringList.h:
        * src/WebDOMStringList.cpp:
        (WebKit::WebDOMStringList::WebDOMStringList):

2010-07-26  Steve Block  <steveblock@google.com>

        Reviewed by Jeremy Orlow.

        Page clients should be passed to Page constructor via structure of pointers
        https://bugs.webkit.org/show_bug.cgi?id=42834

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::WebViewImpl):

2010-07-28  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: chromium tests fix.
        Chromium Dev Tools: [REGRESSION] Pause is not working.

        https://bugs.webkit.org/show_bug.cgi?id=43118

        * src/js/DevTools.js:
        (InspectorBackend.pause):

2010-07-27  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Ojan Vafai.

        Add FILE_SYSTEM build flag for FileSystem API
        https://bugs.webkit.org/show_bug.cgi?id=42915

        * features.gypi:

2010-07-27  James Hawkins  <jhawkins@chromium.org>

        Unreviewed Build Fix. 

        Add a missing itemIcon() method to TestPopupMenuClient.

        * tests/PopupMenuTest.cpp:
        (WebKit::TestPopupMenuClient::itemIcon):

2010-07-27  James Hawkins  <jhawkins@chromium.org>

        Reviewed by Darin Fisher.
