@@ -1,3 +1,12 @@
+2010-07-28  Brett Wilson  <brettw@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        Fix forward declares to be struct instead of class.
+        https://bugs.webkit.org/show_bug.cgi?id=43127
+
+        * public/WebFont.h:
+
 2010-07-28  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Dimitri Glazkov.
